<resources>
    <string name="app_name">MetaU Capstone</string>
    <string name="login">log in</string>
    <string name="signup">sign up</string>
    <string name="username">email</string>
    <string name="password">password</string>
    <string name="action_saved">Saved</string>
    <string name="action_search">Search</string>
    <string name="action_friends">Friends</string>
    <string name="action_profile">Profile</string>
    <string name="logout">Sign out</string>
    <string name="settings">Settings</string>
    <string name="search">Search:</string>
    <string name="cuisine">Cuisine:</string>
    <string name="diet">Diet:</string>
    <string name="intolerance">Intolerance:</string>
    <string name="meal_type">Meal Type:</string>
    <string name="carbs">&lt; Carbohydrates (g) &lt;</string>
    <string name="protein">&lt; Protein (g) &lt;</string>
    <string name="fat">&lt; Fat (g) &lt;</string>
    <string name="sugar">&lt; Sugar (g) &lt;</string>
    <string name="fiber">&lt; Fiber (g) &lt;</string>
    <string name="results">Results</string>
    <string name="no_results">Sorry, there were no search results ):</string>
    <string name="no_saved">No recipes saved yet!</string>
    <string name="error_email_in_use">That email is already in use</string>
    <string name="error_incorrect_password">That password is incorrect</string>
    <string name="error_snackbar">Sorry, there was an error</string>
    <string name="feedback_email">Please enter a valid email</string>
    <string name="feedback_username_and_password">Please enter a username and password</string>
    <string name="feedback_longer_password">Please create a longer password</string>
    <string name="settings_display_name">Display name:</string>
    <string name="settings_bio">Bio:</string>
    <string name="settings_profile_pic">Profile Pic:</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="no_friends">No friends, go make some!</string>
    <string name="new_user_bio">New user!</string>
</resources>