<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clSettings"
    android:padding="8dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDisplayName"
        android:text="@string/settings_display_name"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:id="@+id/etDisplayName"
        app:layout_constraintStart_toEndOf="@id/tvDisplayName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBio"
        android:text="@string/settings_bio"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvDisplayName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/etBio"
        app:layout_constraintStart_toEndOf="@id/tvBio"
        app:layout_constraintTop_toBottomOf="@id/etDisplayName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProfilePic"
        android:text="@string/settings_profile_pic"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etBio"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/ivSettingsProfilePic"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/tvProfilePic"
        app:layout_constraintTop_toBottomOf="@id/etBio"
        tools:src="@tools:sample/avatars" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnGallery"
        android:layout_marginStart="8dp"
        app:icon="@drawable/ic_baseline_image_24"
        app:layout_constraintStart_toEndOf="@id/tvProfilePic"
        app:layout_constraintTop_toBottomOf="@id/ivSettingsProfilePic"/>

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCamera"
        android:layout_marginStart="8dp"
        app:icon="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintStart_toEndOf="@id/btnGallery"
        app:layout_constraintTop_toBottomOf="@id/ivSettingsProfilePic"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabSettingsSave"
        android:src="@drawable/ic_baseline_sticky_note_2_24"
        android:layout_margin="16dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbSettings"
        android:layout_margin="64dp"
        style="?android:attr/progressBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>